# SoLoad

./: CMakeLists.txt  README.md
include/: backtrace.hpp  elf_image.hpp  linker.hpp  log.hpp  sleb128.hpp  soloader.hpp  tls.hpp
src/: backtrace.cpp  elf_image.cpp  linker.cpp  soloader.cpp  tls.cpp
test/: CMakeLists.txt  run_test.bat  run_test.sh  test_lib.cpp
